[gd_scene load_steps=8 format=3 uid="uid://csfll6ofk60qo"]

[ext_resource type="StyleBox" uid="uid://dl63lw1cfixss" path="res://ui/settings/panel.tres" id="1_jwxja"]
[ext_resource type="Script" uid="uid://1dc3qcevl3fs" path="res://ui/settings/settings_menu.gd" id="2_id1gn"]
[ext_resource type="LabelSettings" uid="uid://dvbnvkigo7yj2" path="res://ui/settings/settings_label.tres" id="2_xqw42"]
[ext_resource type="FontFile" uid="uid://bmqfnk0jfu7ke" path="res://assets/fonts/Inter/Inter_18pt-Medium.ttf" id="3_id1gn"]
[ext_resource type="StyleBox" uid="uid://d0fwwic4bdiy" path="res://ui/settings/settings_input.tres" id="4_fjvxm"]
[ext_resource type="FontFile" uid="uid://vbydsuvu1st8" path="res://assets/fonts/Inter/Inter_18pt-Regular.ttf" id="5_bntry"]
[ext_resource type="PackedScene" uid="uid://cnf715osyu1b6" path="res://utils/fader/fader.tscn" id="7_fjvxm"]

[node name="SettingsMenu" type="PanelContainer"]
custom_minimum_size = Vector2(300, 180)
offset_right = 300.0
offset_bottom = 180.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_jwxja")
script = ExtResource("2_id1gn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "OpenAI Key:"
label_settings = ExtResource("2_xqw42")

[node name="OpenAIKey" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
theme_override_colors/font_placeholder_color = Color(0.101960786, 0.101960786, 0.101960786, 0.74509805)
theme_override_fonts/font = ExtResource("3_id1gn")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4_fjvxm")
placeholder_text = "Your Key Here"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Serper Key:"
label_settings = ExtResource("2_xqw42")

[node name="SerperKey" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
theme_override_colors/font_placeholder_color = Color(0.101960786, 0.101960786, 0.101960786, 0.74509805)
theme_override_fonts/font = ExtResource("3_id1gn")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4_fjvxm")
placeholder_text = "Your Key Here"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Model:"
label_settings = ExtResource("2_xqw42")

[node name="Model" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
theme_override_fonts/font = ExtResource("5_bntry")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4_fjvxm")
selected = 0
item_count = 4
popup/item_0/text = "gpt-4.1-mini"
popup/item_0/id = 0
popup/item_1/text = "gpt-4.1"
popup/item_1/id = 1
popup/item_2/text = "gpt-5-mini"
popup/item_2/id = 2
popup/item_3/text = "gpt5"
popup/item_3/id = 3

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Color:"
label_settings = ExtResource("2_xqw42")

[node name="Color" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
theme_override_fonts/font = ExtResource("5_bntry")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4_fjvxm")
selected = 0
item_count = 2
popup/item_0/text = "spring forest"
popup/item_0/id = 0
popup/item_1/text = "autmun leaf"
popup/item_1/id = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Your Name:"
label_settings = ExtResource("2_xqw42")

[node name="Name" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
theme_override_colors/font_placeholder_color = Color(0.101960786, 0.101960786, 0.101960786, 0.74509805)
theme_override_fonts/font = ExtResource("3_id1gn")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4_fjvxm")
placeholder_text = "Your Name Here"

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Your Location:"
label_settings = ExtResource("2_xqw42")

[node name="Location" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
theme_override_colors/font_placeholder_color = Color(0.101960786, 0.101960786, 0.101960786, 0.74509805)
theme_override_fonts/font = ExtResource("3_id1gn")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4_fjvxm")
placeholder_text = "City, Country"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_bntry")
theme_override_font_sizes/font_size = 12
text = "Save"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_bntry")
theme_override_font_sizes/font_size = 12
text = "Cancel"

[node name="Fader" parent="." node_paths=PackedStringArray("target") instance=ExtResource("7_fjvxm")]
unique_name_in_owner = true
target = NodePath("..")
duration = 0.3

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
